k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pmfinder
  labels:
    app.kubernetes.io/name: pmfinder
